compile_tests/expected/constant.stderr
error[E0308]: mismatched types
  --> compile_tests/src/constant.rs:8:9
   |
8  |         CONSTANT = 20;
   |         ^^^^^^^^
   |         |
   |         expected `&mut Gpu<{integer}, Mut>`, found `&mut Gpu<i32, Const>`
   |         arguments to this function are incorrect
   |
   = note: expected mutable reference `&mut Gpu<{integer}, Mut>`
              found mutable reference `&mut Gpu<i32, Const>`
